# aceview

./: .gitignore  LICENSE  PRD.txt  README.md  SETUP.md
backend/: main.py  pyproject.toml
backend/agents/: interview_agent.py  vision_processor.py
frontend/: DEMO_SCRIPT.md  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/interview/: page.tsx
frontend/components/: StreamProvider.tsx
frontend/components/Interview/: AIPromptOverlay.tsx  DevDebugPanel.tsx  LiveTranscript.tsx  MetricsDisplay.tsx  VideoPreview.tsx
frontend/store/: interviewStore.ts
patches/: README.md  deepgram_stt.py  stream_edge_transport.py
